Update ProjectState For Users

--- a/DrawingRegisterWeb/Views/Home/Index.cshtml
+++ b/DrawingRegisterWeb/Views/Home/Index.cshtml
@@ -71,6 +71,15 @@
 </div>
 
 <div class="jumbotron mt-5">
+	<h4 class="display-5 text-center mb-5 text-secondary">SQL Logic</h4>
+	<img class="rounded mx-auto d-block w-100" src="~/Assets/SqlDiagram.gif" style="max-width:900px;" />
+
+
+</div>
+
+<hr class="my-4">
+
+<div class="jumbotron mt-5">
 	<h3 class="display-5 text-center mb-5 text-primary">Register an account and create your own Drawing Register</h3>
 
 	<p class="lead text-secondary">&emsp; You can control how accessible the project is for team members. Each project state will 
@@ -89,11 +98,6 @@
 				</p>
 				<p class="card-text">
 					<strong class="text-warning">Spectators can't Create, Update and Delete</strong>
-				</p>
-				<hr />
-				<p class="card-text">
-					Email:<br />spectator@email.com<br />
-					Password:<br />spectator2022
 				</p>
 			</div>
 		</div>
