--- a/DrawingRegisterWeb/Views/ProjectStates/Index.cshtml
+++ b/DrawingRegisterWeb/Views/ProjectStates/Index.cshtml
@@ -51,38 +51,38 @@
 	<tbody>
 		@foreach (var item in Model.ProjectStates!)
 		{
-		<tr>
-			<td>
-				@item.Name
-			</td>
-			<td>
-				@item.Description
-			</td>
-			<td>
-					@if (item.Name == "Defined" ||
-							item.Name == "Running" ||
-							item.Name == "Canceled" ||
-							item.Name == "Completed")
-					{
-						<button 
-							type="button" 
-							class="btn btn-outline-warning" 
-							data-bs-toggle="tooltip" 
-							data-bs-placement="right" 
-							data-bs-original-title="Standard States are disabled for editing and deleting" 
-							aria-describedby="tooltip716761">
-								<i class="bi bi-question-lg"></i>
-						</button>
-					}
-					else
-					{
-						<div class="btn-group" role="group">
-						<a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-primary">Edit</a>
-						<a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger">Delete</a>
-						</div>
-					}
-			</td>
-		</tr>
+			<tr>
+				<td>
+					@Html.DisplayFor(model => item.Name)
+				</td>
+				<td>
+					@Html.DisplayFor(model => item.Description)
+				</td>
+				<td>
+						@if (item.Name == "Defined" ||
+								item.Name == "Running" ||
+								item.Name == "Canceled" ||
+								item.Name == "Completed")
+						{
+							<button 
+								type="button" 
+								class="btn btn-outline-warning" 
+								data-bs-toggle="tooltip" 
+								data-bs-placement="right" 
+								data-bs-original-title="Standard States are disabled for editing and deleting" 
+								aria-describedby="tooltip716761">
+									<i class="bi bi-question-lg"></i>
+							</button>
+						}
+						else
+						{
+							<div class="btn-group" role="group">
+							<a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-primary">Edit</a>
+							<a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger">Delete</a>
+							</div>
+						}
+				</td>
+			</tr>
 		}
 	</tbody>
 </table>
