--- a/DrawingRegisterWeb/Views/Shared/_Layout.cshtml
+++ b/DrawingRegisterWeb/Views/Shared/_Layout.cshtml
@@ -13,10 +13,11 @@
 <body>
 	<header>
 		<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-			<div class="container-fluid">
+			<div class="container">
 				<a class="navbar-brand text-primary" asp-controller="Home" asp-action="Index">
 					<i class="bi bi-wrench-adjustable-circle"></i>
-					Drawing Register</a>
+					Drawing Register
+				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
 						aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -24,12 +25,12 @@
 				<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
 					<ul class="navbar-nav flex-grow-1">
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-controller="DrawingRegisters" asp-action="Index">My Registers</a>
+							<a class="nav-link text-dark" asp-controller="DrawingRegisters" asp-action="Index">Manager</a>
 						</li>
 						@if (User.IsInRole("Administrator"))
 						{
 							<li class="nav-item">
-								<a class="nav-link text-dark" asp-controller="ProjectStates" asp-action="Index">Project States</a>
+								<a class="nav-link text-dark" asp-controller="ProjectStates" asp-action="Index">States</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link text-dark" asp-controller="Projects" asp-action="Index">Projects</a>
