--- a/DrawingRegisterWeb/wwwroot/css/site.css
+++ b/DrawingRegisterWeb/wwwroot/css/site.css
@@ -1,3 +1,4 @@
+
 html {
   font-size: 14px;
 }
@@ -23,4 +24,16 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     height: 20em;
+}
+#backgroundImgDR {
+    position: relative;
+    background-image: url('../Assets/image-enginnering-bg-dr.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.8;
+    height: 15em;
+}
+#backgroundImgDR h1 {
+    background-color: rgb(11, 94, 255, 0.6);
+    height: 100%;
 }
