--- a/DrawingRegisterWeb/Views/DrawingRegisters/Create.cshtml
+++ b/DrawingRegisterWeb/Views/DrawingRegisters/Create.cshtml
@@ -11,7 +11,6 @@
 
 <div class="row row-cols-1 row-cols-lg-2 g-2 g-lg-3 mt-3">
 	<div class="col">
-		<div class="container h-100">
 			<h2 class="text-info"><i class="bi bi-info-circle"></i></h2>
 			<ul class="list-group">
 				<li class="list-group-item list-group-item-success p-3">
@@ -21,12 +20,11 @@
 				<li class="list-group-item list-group-item-primary p-3">
 					&emsp;The administrator can change team member's role or delete existing member from the Register
 					at any time
+					<br /><br />
 				</li>
 			</ul>
-		</div>
 	</div>
 	<div class="col">
-		<div class="container">
 			<h2 class="text-warning"><i class="bi bi-exclamation-circle"></i></h2>
 			<ul class="list-group">
 				 <li class="list-group-item list-group-item-warning p-3">
@@ -39,15 +37,13 @@
 					 role to team members!
 				</li>
 			</ul>
-		</div>
-
 	</div>
 </div>
 
 <form asp-action="Create" class="mt-5 text-center">
 @*	<input asp-for="UserId" value="@Model.UserId" hidden>*@
 	<div class="btn-group">
-		<button type="submit" class="btn btn-lg btn-outline-primary"><i class="bi bi-plus-circle lead"></i> Create New Register</button>
-		<a asp-action="Index" class="btn btn-lg btn-outline-secondary"><i class="bi bi-arrow-return-left"></i> Back to Manager</a>
+		<button type="submit" class="btn btn-outline-primary"><i class="bi bi-plus-circle"></i> Create New Register</button>
+		<a asp-action="Index" class="btn btn-outline-secondary"><i class="bi bi-arrow-return-left"></i> Back to Manager</a>
 	</div>
 </form>
