--- a/DrawingRegisterWeb/Views/DrawingRegisters/Delete.cshtml
+++ b/DrawingRegisterWeb/Views/DrawingRegisters/Delete.cshtml
@@ -1,27 +1,22 @@
 ﻿@model DrawingRegisterWeb.Models.DrawingRegister
 
 @{
-    ViewData["Title"] = "Delete";
+	ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1 class="text-danger">Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>DrawingRegister</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-@*            @Html.DisplayNameFor(model => model.IdentityUser)*@
-        </dt>
-        <dd class = "col-sm-10">
-@*            @Html.DisplayFor(model => model.IdentityUser.Id)*@
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+	<h4>Drawing Register</h4>
+
+	<hr />
+	
+	<form asp-action="Delete">
+		<input type="hidden" asp-for="Id" />
+		<div class="btn-group">
+			<input type="submit" value="Delete" class="btn btn-outline-danger" />
+			<a asp-action="Index" class="btn btn-outline-secondary">Back</a>
+		</div>
+	</form>
 </div>
