Updated DrawingRegisterController, Invitation model

--- a/DrawingRegisterWeb/Views/DrawingRegisters/Delete.cshtml
+++ b/DrawingRegisterWeb/Views/DrawingRegisters/Delete.cshtml
@@ -6,9 +6,12 @@
 
 <h1 class="text-danger">Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete your Drawing Register?</h3>
 <div>
-	<h4>Drawing Register</h4>
+	<p class="lead text-danger"><strong>
+		&emsp;Once Register Deleted your Drawings and Projects will be Deleted as well. After Register is removed,
+		you can request invitation to join another Drawing Register or create a new Register again
+	</strong></p>
 
 	<hr />
 	
