--- a/DrawingRegisterWeb/Views/Shared/_LoginPartial.cshtml
+++ b/DrawingRegisterWeb/Views/Shared/_LoginPartial.cshtml
@@ -72,7 +72,7 @@ else
 			role="button" 
 			aria-haspopup="true" 
 			aria-expanded="false">
-				<i class="bi bi-door-open-fill text-primary"></i>
+				<i class="bi bi-person-fill"></i>
 		</a>
 		<div class="dropdown-menu dropdown-menu-end">
 			<a class="dropdown-item" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
