--- a/DrawingRegisterWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/DrawingRegisterWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -7,7 +7,7 @@
 <h1>@ViewData["Title"]</h1>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-5">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h2>Create a new account.</h2>
             <hr />
@@ -30,35 +30,19 @@
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to register.</h3>
+    <div class="col-md-7 mt-5">
+        <section class="text-center">
+            <h2>There is no Forced Registration!</h2>
             <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
+            <h6 class="text-secondary"><strong>You can use a spectator mode user for a quick glimpse of the website!</strong></h6>
+            <div class="container text-center mt-4 mb-4">
+                <img style="height:4em; width:4em" src="~/Assets/incognito.png" />
+                <button class="btn-lg btn-dark col">Login as Spectator</button>
+            </div>
+            <p class="text-warning"><strong>&emsp;Spectators can't Create, Update and Delete</strong>
+            </p>
         </section>
+    </div>
     </div>
 </div>
 
