--- a/DrawingRegisterWeb/Views/DrawingRegisters/Create.cshtml
+++ b/DrawingRegisterWeb/Views/DrawingRegisters/Create.cshtml
@@ -40,9 +40,29 @@
 	</div>
 </div>
 
-<form asp-action="Create" class="mt-5 text-center">
-	<div class="btn-group">
+<form asp-action="Create" class="mt-5">
+	<div class="form-check form-switch">
+		<input onclick="changeText()" name="seedData" value="true" class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" checked>
+		<label id="checkBoxLabel" class="form-check-label text-primary" for="flexSwitchCheckChecked">Seed Register with example projects, drawings, documentation and layouts</label>
+	</div>
+	<div class="btn-group text-center mt-3">
 		<button type="submit" class="btn btn-outline-primary"><i class="bi bi-plus-circle"></i> Create New Register</button>
 		<a asp-action="Index" class="btn btn-outline-secondary"><i class="bi bi-arrow-return-left"></i> Back to Manager</a>
 	</div>
 </form>
+
+@section Scripts {
+	<script>
+		const checkBoxLabel = document.getElementById("checkBoxLabel");
+
+		function changeText(){
+			if(checkBoxLabel.classList.contains("text-primary")){
+				checkBoxLabel.classList.remove("text-primary");
+				checkBoxLabel.classList.add("text-secondary");
+			} else {
+				checkBoxLabel.classList.remove("text-secondary");
+				checkBoxLabel.classList.add("text-primary");
+			}
+		}
+	</script>
+}
